--- a/browser/app.html
+++ b/browser/app.html
@@ -14,11 +14,7 @@
 
 <body>
   <div id="prebundleContent">
-    <h1 style="margin: 5px auto;">WebVr</h1>
-    <div style="text-align: center;"> Virtual Teams </div>
-    <div style="text-align: center;"> Shared VR Experiences </div>
-    <div style="text-align: center;"> Real Friends </div>
-    
+    <h1 style="margin: 5px auto;">V Meetup</h1>
     <img style="width: 50px; height: 50px;" src="/images/spinner.gif"/>
   </div>
   <div id="react-app" style="width: 100%; height: 100%"></div>
